# CorporateCafeSystemWNS-new

./: .gitignore  .microservices_pids  DEPLOYMENT_OPTIONS.md  DOCKER_SETUP.md  PROJECT_EXPORT_GUIDE.md  README-Microservices.md  docker-build.sh  docker-compose.simple.yml  docker-compose.yml  docker-logs.sh  docker-run.sh  docker-stop.sh  package-lock.json  package.json  pyproject.toml  railway-deploy.sh  replit.md  shared_microservices.db  test_auth.db
client/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
gateway/: nginx.conf
scripts/: add_comprehensive_data.py  add_dummy_data.py  add_employees.py  build.sh  create_super_admin.py  deploy.sh  logs.sh  populate_shared_db.py  run-microservices.sh  shared_microservices.db  stop-microservices.sh  stop.sh  test-microservices.sh  test_auth.db
services/admin-service/: Dockerfile  auth.py  database.py  main.py  middleware.py  requirements.txt
services/cafe-service/: Dockerfile  database.py  main.py  schemas.py  shared_auth.db  test_auth.db
services/feedback-service/: Dockerfile  auth.py  auth_fixed.py  database.py  main.py  middleware.py  middleware_fixed.py  test_token.py
services/menu-service/: Dockerfile  auth.py  database.py  main.py  middleware.py  models.py  schemas.py  shared_auth.db  test_auth.db
services/notification-service/: Dockerfile  database.py  main.py  microservices.db  schemas.py
services/order-service/: Dockerfile  database.py  main.py  models.py  requirements.txt
services/payment-service/: Dockerfile  database.py  (+2 more)
(+48 files in other folders)
